--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -81,7 +81,8 @@ jobs:
 
       - name: Pull latest image from ECR
         run: |
-          docker pull ${{ secrets.AWS_ECR_LOGIN_URI }}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+          aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | \docker login --username AWS --password-stdin ${{ secrets.AWS_ECR_LOGIN_URI }}
+
 
       - name: Run Docker Image to serve users
         run: |
